--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
         android:text="PySense"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -97,13 +98,40 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="14dp"
         android:alpha="1"
         android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
         android:text="Temp"
         app:layout_constraintEnd_toStartOf="@+id/tvTempDisplay"
         app:layout_constraintHorizontal_bias="0.744"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/Title" />
+
+    <ToggleButton
+        android:id="@+id/tbManualOverride"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
+        android:text="Manual Override"
+        android:textOff="Automatic"
+        android:textOn="Manual"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvRangeDisplay" />
+
+    <SeekBar
+        android:id="@+id/seekBarServoController"
+        android:layout_width="270dp"
+        android:layout_height="17dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbManualOverride" />
 
 </android.support.constraint.ConstraintLayout>
