--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:screenOrientation="portrait"
     tools:context=".MainActivity">
 
     <TextView
@@ -125,11 +126,15 @@
 
     <SeekBar
         android:id="@+id/seekBarServoController"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
         android:layout_width="270dp"
         android:layout_height="17dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
+        android:max="180"
+        android:progress="1"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbManualOverride" />
